Use RenderAttachmentBlockEntity and other model improvements